<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bewegungsmelder</string>
    <string name="action_select_date">Datum wählen</string>
    <string name="action_update_db">Events updaten</string>
    <string name="text_search_for_update">Nach Updates suchen...</string>
    <string name="text_download_update">Update herunterladen...</string>
    <string name="text_no_update_available">Kein Update verfügbar</string>
    <string name="text_update_success">Update erfolgreich</string>
    <string name="text_update_error">Fehler beim Update. Versuche es später nochmal!</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_filter">Filter</string>
    <string name="action_favorites">Favoriten</string>
    <string name="button_save">Speichern</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="title_activity_about">Über die App</string>
    <string name="hello_world">Hello world!</string>

</resources>
